force-app/main/default/objects/CostEstimate__c/CostEstimate__c.object-meta.xml
<CustomObject>
    <label>Cost Estimate</label>
    <nameField>
        <label>Cost Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>