force-app/main/default/objects/CostEstimate__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>