force-app/main/default/objects/CostEstimate__c/fields/FalseEstimate__c.field-meta.xml
<CustomField>
    <fullName>FalseEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>False Estimate</label>
    <type>Checkbox</type>
</CustomField>