force-app/main/default/objects/CostEstimate__c/fields/FixedPrice__c.field-meta.xml
<CustomField>
    <fullName>FixedPrice__c</fullName>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>