force-app/main/default/objects/CostEstimate__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed ?</label>
    <type>Checkbox</type>
</CustomField>