force-app/main/default/objects/CostEstimate__c/fields/SumAllOpps__c.field-meta.xml
<CustomField>
    <fullName>SumAllOpps__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumAllOpps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>