force-app/main/default/objects/CostEstimate__c/fields/SumWonOpps__c.field-meta.xml
<CustomField>
    <fullName>SumWonOpps__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumWonOpps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>